--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="/css/main.css">
   </head>
   <body>
-  Hello world!
+  <h1>Hello world!</h1>
   
   bitbucket静的ページ検証用
   </body>
