--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Jadeのお試しページ</title>
-    <meta name="description" content="ディスクリプション" />   
+    <title>Jade's Portfolio</title>
+    <meta name="description" content="Jadeのポートフォリオ。雑多に" />
     <meta name="robots" content="noarchive">    
     <link rel="shortcut icon" href="/img/favicon.ico"> 
     <link rel="stylesheet" type="text/css" href="/css/main.css">
   </head>
   <body>
+  <div class="header">
+
+  </div>
   <h1>Hello world!</h1>
   
-  bitbucket静的ページ検証用
+  静的ページ検証用
   </body>
 </html>
